test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/label_static_var_same_name.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 5
                      None: 
                    None: 
                  Int: 
                  CStatic: 
            CS: 
              CGoto: 
                TIdentifier: x
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
            CS: 
              CLabel: 
                TIdentifier: x
                CReturn: 
                  CVar: 
                    TIdentifier: x
                    None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
