test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/redeclare_fun_as_file_scope_var.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
